css/nav.css
nav {
    display: flex;
    justify-content: space-around;
    align-items: center;

    min-height: 6vh;
    background-color: #F6AF33;

    font-family: 'MontserratR';

    z-index: 50;
}

.logo {
    color: rgb(31, 31, 31);

    font-size: 20px;
}

.nav-links {
    display: flex;
    flex-direction: row;

    justify-content: space-around;
    width: 50vw;

    list-style: none;
}

.nav-links a {
    color: rgb(31, 31, 31);
    text-decoration: none;
}

.burger {
    display: none;
}

.burger div {
    width: 25px;
    height: 3px;
    margin: 5px;
    background-color: white;

    transition: all 0.3s ease;
}

@media screen and (max-width:768px) {
    body, html {
        position: relative;
        overflow-x: hidden;
        height: 100vh;
    }

    .nav-links {
        position: absolute;
        right: 0px;
        height: 94vh;
        background-color: #F6AF33;
        top: 6vh;
        width: 70%;
        display: flex;
        flex-direction: column;
        align-items: center;

        transform: translateX(100%);
        transition: transform 0.7s ease-in-out;
    }

    .nav-links li {
        opacity: 0;
    }

    .burger {
        display: block;
        cursor: pointer;
    }
}

.nav-active {
    transform: translateX(0%);
}

@keyframes navLinksFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }

    to {
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px)
}

